bundled_metadata/force-app/main/default/objects/Account_Relationship__c/Account_Relationship__c.object-meta.xml
<CustomObject>
    <label>Account Relationship</label>
    <nameField>
        <displayFormat>AR-{00000000}</displayFormat>
        <label>Account Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Relationships</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>