bundled_metadata/force-app/main/default/objects/Account_Relationship__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the account relationship is active</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>