bundled_metadata/force-app/main/default/objects/Account_Relationship__c/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Customer account record</description>
    <label>Customer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Relationships</relationshipLabel>
    <relationshipName>Account_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>