bundled_metadata/force-app/main/default/objects/Account_Relationship__c/fields/Customer_ERP_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ERP_ID__c</fullName>
    <description>Id of the customer in the ERP system</description>
    <label>Customer ERP ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>