bundled_metadata/force-app/main/default/objects/Account_Relationship__c/fields/Customer_ERP_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_ERP_Name__c</fullName>
    <description>Name of the customer in the ERP system</description>
    <label>Customer ERP Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>