bundled_metadata/force-app/main/default/objects/Account_Relationship__c/fields/Customer_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_External_Id__c</fullName>
    <description>External Id of the customer in Pepsico systems</description>
    <externalId>true</externalId>
    <label>Customer External Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>