bundled_metadata/force-app/main/default/objects/Account_Relationship__c/fields/Customer_Store_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Store_Id__c</fullName>
    <description>Id of the customer store in the ERP</description>
    <label>Customer Store Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>