bundled_metadata/force-app/main/default/objects/Account_Relationship__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The payer or wholesaler related to the customer</description>
    <label>Related Account</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>Related account needs to be matched with the relationship type</errorMessage>
        <filterItems>
            <field>$Source.Relationship_Type__c</field>
            <operation>equals</operation>
            <value>3PL</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <valueField>$Source.Relationship_Type__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Relationships (Related Account)</relationshipLabel>
    <relationshipName>Account_Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>