bundled_metadata/force-app/main/default/objects/Account_Relationship__c/fields/Related_Account_ExternaIId__c.field-meta.xml
<CustomField>
    <fullName>Related_Account_ExternaIId__c</fullName>
    <description>External Id of the related entity.</description>
    <externalId>true</externalId>
    <label>Related Account External Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>