bundled_metadata/force-app/main/default/objects/Account_Relationship__c/fields/Wholesaler_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler_Relationship__c</fullName>
    <label>Wholesaler Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>